[gd_scene load_steps=3 format=3 uid="uid://da6i4xy7lm70m"]

[ext_resource type="Script" path="res://scenes/game_over_screen.gd" id="1_knkpu"]
[ext_resource type="AudioStream" uid="uid://c1rbq5tmt3xnt" path="res://SweetSounds_SFX/WAV/Click.wav" id="2_wa2yx"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_knkpu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.431373, 0.631373, 0.431373, 1)

[node name="GameOver" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -570.0
offset_right = 570.0
offset_bottom = 302.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 221
text = "GameOver"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.5
offset_top = -288.5
offset_right = 407.5
offset_bottom = -95.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 141
text = "YourScore:0"

[node name="Thanks" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -409.0
offset_top = -91.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "Thanks for playing!
Author:信管 计科 2023-2 Sy_"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -659.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 60

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 131
text = "Restart"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 131
text = "Quit"

[node name="BackToTitle" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 113
text = "BackToTitle"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(727.5, 525)
stream = ExtResource("2_wa2yx")

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToTitle" to="." method="_on_back_to_title_pressed"]
